@@ -1469,16 +1469,16 @@ def createCodeInterface(e,sw,idt,idx):
 
 	#??invoke()??
 	# sw.writeln("@Override")
-	sw.writeln("public override bool invoke(RpcMessage m){").idt_inc()
+	sw.writeln("public override RpcMessage invoke(RpcMessage m){").idt_inc()
 #	sw.writeln('boolean r=false;')
 #	sw.writeln('RpcMessageXML m = (RpcMessageXML)m_;')
 	for opidx,m in enumerate(e.list):
 		opidx = m.index
-
+		sw.writeln('RpcMessage mr = null;')
 		sw.writeln('if(m.opidx == %s ){'%opidx).idt_inc()
-		sw.writeln('return func_%s_delegate(m);'%opidx )
+		sw.writeln('mr = func_%s_delegate(m);'%opidx )
 		sw.scope_end()
-	sw.writeln('return false;')
+	sw.writeln('return mr;')
 	sw.scope_end() # end - invoke()
 	sw.wln()
 
@@ -1486,9 +1486,9 @@ def createCodeInterface(e,sw,idt,idx):
 	for opidx,m in enumerate(e.list): # function list
 		opidx = m.index
 		sw.writeln('// func: %s'%m.name)
-		sw.writeln('bool func_%s_delegate(RpcMessage m){'%(opidx) ).idt_inc()
+		sw.writeln('RpcMessage func_%s_delegate(RpcMessage m){'%(opidx) ).idt_inc()
 		params=[ ]
-		sw.writeln('bool r = false;')
+		# sw.writeln('bool r = false;')
 		# sw.writeln('r = false;')
 		if m.params:
 			# sw.writeln('ByteBuffer d = ByteBuffer.wrap(m.paramstream);')
@@ -1529,6 +1529,12 @@ def createCodeInterface(e,sw,idt,idx):
 		sw.define_var('servant',e.getName(),'(%s)this.inst'%e.getName())
 		sw.writeln('RpcContext ctx = new RpcContext();')
 		sw.writeln('ctx.msg = m;')
+
+
+
+
+		# sw.writeln('try{').idt_inc()
+
 		if isinstance(m.type,Builtin) and m.type.type =='void': # none return value
 			sw.writeln("servant.%s(%sctx);"%(m.name,ps) )
 		else:
@@ -1537,28 +1543,38 @@ def createCodeInterface(e,sw,idt,idx):
 
 
 		sw.writeln("if( (m.calltype & RpcMessage.ONEWAY) !=0 ){").idt_inc()
-		sw.writeln("return true;") #?????????
+		sw.writeln("return null;") #no return
 		sw.scope_end()
 
 		sw.wln()
 		#?????
+
+		sw.define_var('mr','RpcMessage','new RpcMessage(RpcMessage.RETURN)')
+		sw.writeln('mr.sequence = m.sequence;')
+		sw.writeln('mr.callmsg = m;')
+		sw.writeln('mr.conn = m.conn;')
+		sw.writeln('mr.ifidx = m.ifidx;')
+		sw.writeln('mr.call_id = m.call_id;')
+		sw.writeln('if(m.extra.getProperties().ContainsKey("__user_id__")){').idt_inc()
+		sw.writeln('mr.extra.setPropertyValue("__user_id__",m.extra.getPropertyValue("__user_id__"));')
+		sw.scope_end()
 #
 		if m.type.name !='void':
-			sw.define_var('mr','RpcMessage','new RpcMessage(RpcMessage.RETURN)')
-			sw.writeln('mr.sequence = m.sequence;')
-			sw.writeln('mr.callmsg = m;')
-			sw.writeln('mr.conn = m.conn;')
-			sw.writeln('mr.ifidx = m.ifidx;')
-			sw.writeln('mr.call_id = m.call_id;')
-			sw.writeln('if(m.extra.getProperties().ContainsKey("__user_id__")){').idt_inc()
-			sw.writeln('mr.extra.setPropertyValue("__user_id__",m.extra.getPropertyValue("__user_id__"));')
-			sw.scope_end()
+			# sw.define_var('mr','RpcMessage','new RpcMessage(RpcMessage.RETURN)')
+			# sw.writeln('mr.sequence = m.sequence;')
+			# sw.writeln('mr.callmsg = m;')
+			# sw.writeln('mr.conn = m.conn;')
+			# sw.writeln('mr.ifidx = m.ifidx;')
+			# sw.writeln('mr.call_id = m.call_id;')
+			# sw.writeln('if(m.extra.getProperties().ContainsKey("__user_id__")){').idt_inc()
+			# sw.writeln('mr.extra.setPropertyValue("__user_id__",m.extra.getPropertyValue("__user_id__"));')
+			# sw.scope_end()
 
 
 
 	#		sw.writeln("m.sequence = ctx.msg.sequence;") #???????????????
 	#
-			sw.writeln('try{').idt_inc()
+			# sw.writeln('try{').idt_inc()
 			# sw.writeln('ByteArrayOutputStream bos = new ByteArrayOutputStream();')
 			# sw.writeln('DataOutputStream dos = new DataOutputStream(bos);')
 
@@ -1584,14 +1600,15 @@ def createCodeInterface(e,sw,idt,idx):
 				sw.writeln("cr.marshall(dos);")
 			sw.writeln('mr.paramsize = 1;')
 			sw.writeln('mr.paramstream = %s.ToArray();'%bos)
-			sw.idt_dec().writeln('}catch(Exception e){').idt_inc()
-			sw.writeln('RpcCommunicator.instance().logger.error(e.ToString());')
-			sw.writeln('r = false;')
-			sw.writeln('return r;')
-			sw.scope_end()
+			# sw.idt_dec().writeln('}catch(Exception e){').idt_inc()
+			# sw.writeln('RpcCommunicator.instance().logger.error(e.ToString());')
+			# sw.writeln('r = false;')
+			# sw.writeln('return r;')
+			# sw.scope_end()
 
-			sw.writeln("r =m.conn.sendMessage(mr);") #????
-		sw.writeln("return r;")
+			# sw.writeln("r =m.conn.sendMessage(mr);") #????
+		# sw.writeln("return r;")
+		sw.writeln('return mr;')
 
 		sw.scope_end() # end servant function{}
 		sw.wln()
